# HW_13_fastapi

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  avatar.py  email.py
src/services/templates/: general_mail_template.html
tests/: conftest.py  test_e2e_routes_auth.py  test_e2e_routes_contacts.py  test_unittest_contacts.py  unittest_contacts.py
